--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,8 @@
     "name": "一級建築士 学習アプリ",
     "short_name": "建築士学習",
     "description": "一級建築士試験の過去問題を使って効率的に学習できるアプリ",
-    "start_url": "/",
+    "start_url": "./index.html",
+    "scope": "./",
     "display": "standalone",
     "background_color": "#0f172a",
     "theme_color": "#1a365d",
@@ -21,6 +22,8 @@
             "purpose": "any maskable"
         }
     ],
-    "categories": ["education"],
+    "categories": [
+        "education"
+    ],
     "lang": "ja"
 }
