--- a/manifest.json
+++ b/manifest.json
@@ -5,8 +5,8 @@
     "start_url": "./index.html",
     "scope": "./",
     "display": "standalone",
-    "background_color": "#0f172a",
-    "theme_color": "#1a365d",
+    "background_color": "#1c2030",
+    "theme_color": "#2a4070",
     "orientation": "any",
     "icons": [
         {
