style: ユーザー提供のPNGアイコンを追加・適用

--- a/manifest.json
+++ b/manifest.json
@@ -10,6 +10,12 @@
     "orientation": "any",
     "icons": [
         {
+            "src": "./icons/Gemini_Generated_Image_c880t2c880t2c880.png",
+            "sizes": "512x512",
+            "type": "image/png",
+            "purpose": "any"
+        },
+        {
             "src": "./icons/icon.svg",
             "sizes": "any",
             "type": "image/svg+xml",
